--- a/mysql/pom.xml
+++ b/mysql/pom.xml
@@ -1,30 +1,32 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>com.formation.examples</groupId>
-	<artifactId>example-parent</artifactId>
-	<version>1.0</version>
-
-    <packaging>pom</packaging>
-
-	<name>guava-example</name>
-	<!-- FIXME change it to the project's website -->
-	<url>http://www.example.com</url>
-
+	<parent>
+		<groupId>com.formation.examples</groupId>
+		<artifactId>example-parent</artifactId>
+		<version>1.0</version>
+	</parent>
+	<groupId>com.formation.bd</groupId>
+	<artifactId>mysql</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<name>mysql</name>
+	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>10</maven.compiler.source>
+		<maven.compiler.target>10</maven.compiler.target>
 	</properties>
 
 	<dependencies>
 
-		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
 		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>31.1-jre</version>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.36.0.3</version>
 		</dependency>
 
 		<dependency>
@@ -36,8 +38,7 @@
 	</dependencies>
 
 	<build>
-		<pluginManagement>
-      <!-- lock down plugins versions to avoid using Maven 
+		<pluginManagement><!-- lock down plugins versions to avoid using Maven 
 				defaults (may be moved to parent pom) -->
 			<plugins>
 				<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
@@ -82,6 +83,4 @@
 			</plugins>
 		</pluginManagement>
 	</build>
-<modules>  <module>mysql</module>
-  </modules>
 </project>
